--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,16 @@
+:root {
+  /* Command the Cause Purple */
+  --color-sweetFlag: #633c97;
+  /* Success Green */
+  --color-skirretGreen: #4BB543
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  --CtC_Purple: rgb(99, 60, 151);
 }
 
 a {
